@@ -15,10 +15,25 @@
 #include <string>
 #include "interfaces.h"
 
+#ifdef __linux__
+#include "interfaces-linux.h"
+#endif
+
+
 LATinterfaces::LATinterfaces()
 {
 }
 
 LATinterfaces::~LATinterfaces()
 {
+}
+
+
+LATinterfaces *LATinterfaces::Create()
+{
+#ifdef __linux__
+    return new LinuxInterfaces();
+#endif
+
+// TODO Stick others here...
 }
